@@ -37,7 +37,6 @@ import org.cloudburstmc.math.vector.Vector3f;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityDataTypes;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityEventType;
 import org.cloudburstmc.protocol.bedrock.data.entity.EntityFlag;
-import org.cloudburstmc.protocol.bedrock.data.entity.EntityProperty;
 import org.cloudburstmc.protocol.bedrock.packet.AddEntityPacket;
 import org.cloudburstmc.protocol.bedrock.packet.EntityEventPacket;
 import org.cloudburstmc.protocol.bedrock.packet.MoveEntityAbsolutePacket;
@@ -55,6 +54,7 @@ import org.geysermc.geyser.entity.properties.type.PropertyType;
 import org.geysermc.geyser.entity.spawn.EntitySpawnContext;
 import org.geysermc.geyser.entity.type.living.MobEntity;
 import org.geysermc.geyser.entity.type.player.PlayerEntity;
+import org.geysermc.geyser.entity.type.player.SessionPlayerEntity;
 import org.geysermc.geyser.entity.vehicle.ClientVehicle;
 import org.geysermc.geyser.item.Items;
 import org.geysermc.geyser.item.type.Item;
@@ -101,9 +101,11 @@ public class Entity implements GeyserEntity {
      */
     @Setter(AccessLevel.NONE)
     protected String nametag = "";
+    protected boolean customNameVisible;
 
     protected Vector3f position;
     protected Vector3f motion;
+    private float offset;
 
     /**
      * x = Yaw, y = Pitch, z = HeadYaw
@@ -131,7 +133,8 @@ public class Entity implements GeyserEntity {
     @Setter(AccessLevel.NONE)
     private float boundingBoxWidth;
     @Setter(AccessLevel.NONE)
-    protected String displayName;
+    @Getter(AccessLevel.NONE)
+    protected @Nullable String customName = null;
     @Setter(AccessLevel.NONE)
     protected boolean silent = false;
     /* Metadata end */
@@ -161,12 +164,12 @@ public class Entity implements GeyserEntity {
     public Entity(EntitySpawnContext context) {
         this.session = context.session();
         this.definition = context.entityTypeDefinition();
-        this.displayName = standardDisplayName();
 
         this.entityId = context.javaId();
         this.geyserId = context.geyserId();
         this.uuid = context.uuid();
         this.motion = context.motion();
+        this.offset = context.offset();
         this.yaw = context.yaw();
         this.pitch = context.pitch();
         this.headYaw = context.headYaw();
@@ -205,7 +208,7 @@ public class Entity implements GeyserEntity {
         addEntityPacket.setIdentifier(definition.identifier());
         addEntityPacket.setRuntimeEntityId(geyserId);
         addEntityPacket.setUniqueEntityId(geyserId);
-        addEntityPacket.setPosition(position);
+        addEntityPacket.setPosition(bedrockPosition());
         addEntityPacket.setMotion(motion);
         addEntityPacket.setRotation(Vector2f.from(pitch, yaw));
         addEntityPacket.setHeadRotation(headYaw);
@@ -248,6 +251,10 @@ public class Entity implements GeyserEntity {
             passenger.setVehicle(null);
             passenger.setFlag(EntityFlag.RIDING, false);
             passenger.updateBedrockMetadata();
+
+            if (passenger instanceof SessionPlayerEntity entity) {
+                entity.setRemovedPlayerVehicleId(this.entityId);
+            }
         }
 
         RemoveEntityPacket removeEntityPacket = new RemoveEntityPacket();
@@ -263,48 +270,63 @@ public class Entity implements GeyserEntity {
 
     public void moveRelativeRaw(double relX, double relY, double relZ, float yaw, float pitch, float headYaw, boolean isOnGround) {
         if (this instanceof ClientVehicle clientVehicle) {
-            if (clientVehicle.isClientControlled()) {
+            if (clientVehicle.shouldSimulateMovement()) {
                 return;
             }
             clientVehicle.getVehicleComponent().moveRelative(relX, relY, relZ);
         }
 
-        position = Vector3f.from(position.getX() + relX, position.getY() + relY, position.getZ() + relZ);
+        setPosition(position.add(relX, relY, relZ));
+        setOnGround(isOnGround);
 
-        MoveEntityDeltaPacket moveEntityPacket = new MoveEntityDeltaPacket();
-        moveEntityPacket.setRuntimeEntityId(geyserId);
-        if (relX != 0.0) {
-            moveEntityPacket.setX(position.getX());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_X);
-        }
-        if (relY != 0.0) {
-            moveEntityPacket.setY(position.getY());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Y);
-        }
-        if (relZ != 0.0) {
-            moveEntityPacket.setZ(position.getZ());
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Z);
-        }
+        boolean dirtyPitch = false, dirtyYaw = false, dirtyHeadYaw = false;
         if (pitch != this.pitch) {
             this.pitch = pitch;
-            moveEntityPacket.setPitch(pitch);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_PITCH);
+            dirtyPitch = true;
         }
+
         if (yaw != this.yaw) {
             this.yaw = yaw;
-            moveEntityPacket.setYaw(yaw);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_YAW);
+            dirtyYaw = true;
         }
+
         if (headYaw != this.headYaw) {
             this.headYaw = headYaw;
-            moveEntityPacket.setHeadYaw(headYaw);
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_HEAD_YAW);
+            dirtyHeadYaw = true;
         }
-        setOnGround(isOnGround);
-        if (isOnGround) {
-            moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.ON_GROUND);
+
+        if (isValid()) {
+            MoveEntityDeltaPacket moveEntityPacket = new MoveEntityDeltaPacket();
+            moveEntityPacket.setRuntimeEntityId(geyserId);
+            if (relX != 0.0) {
+                moveEntityPacket.setX(bedrockPosition().getX());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_X);
+            }
+            if (relY != 0.0) {
+                moveEntityPacket.setY(bedrockPosition().getY());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Y);
+            }
+            if (relZ != 0.0) {
+                moveEntityPacket.setZ(bedrockPosition().getZ());
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_Z);
+            }
+            if (dirtyPitch) {
+                moveEntityPacket.setPitch(pitch);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_PITCH);
+            }
+            if (dirtyYaw) {
+                moveEntityPacket.setYaw(yaw);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_YAW);
+            }
+            if (dirtyHeadYaw) {
+                moveEntityPacket.setHeadYaw(headYaw);
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.HAS_HEAD_YAW);
+            }
+            if (isOnGround) {
+                moveEntityPacket.getFlags().add(MoveEntityDeltaPacket.Flag.ON_GROUND);
+            }
+            session.sendUpstreamPacket(moveEntityPacket);
         }
-        session.sendUpstreamPacket(moveEntityPacket);
     }
 
     public void moveAbsolute(Vector3f position, float yaw, float pitch, boolean isOnGround, boolean teleported) {
@@ -317,20 +339,26 @@ public class Entity implements GeyserEntity {
 
     public void moveAbsoluteRaw(Vector3f position, float yaw, float pitch, float headYaw, boolean isOnGround, boolean teleported) {
         setPosition(position);
-        // Setters are intentional so it can be overridden in places like AbstractArrowEntity
+        // Setters are intentional, so it can be overridden in places like AbstractArrowEntity
         setYaw(yaw);
         setPitch(pitch);
         setHeadYaw(headYaw);
         setOnGround(isOnGround);
 
-        MoveEntityAbsolutePacket moveEntityPacket = new MoveEntityAbsolutePacket();
-        moveEntityPacket.setRuntimeEntityId(geyserId);
-        moveEntityPacket.setPosition(position);
-        moveEntityPacket.setRotation(getBedrockRotation());
-        moveEntityPacket.setOnGround(isOnGround);
-        moveEntityPacket.setTeleported(teleported);
+        if (isValid()) {
+            MoveEntityAbsolutePacket moveEntityPacket = new MoveEntityAbsolutePacket();
+            moveEntityPacket.setRuntimeEntityId(geyserId);
+            moveEntityPacket.setPosition(bedrockPosition());
+            moveEntityPacket.setRotation(bedrockRotation());
+            moveEntityPacket.setOnGround(isOnGround);
+            moveEntityPacket.setTeleported(teleported);
 
-        session.sendUpstreamPacket(moveEntityPacket);
+            session.sendUpstreamPacket(moveEntityPacket);
+        }
+    }
+
+    public Vector3f position() {
+        return position;
     }
 
     /**
@@ -489,31 +517,27 @@ public class Entity implements GeyserEntity {
         return uuid != null ? uuid.toString() : null;
     }
 
-    public void setDisplayName(EntityMetadata<Optional<Component>, ?> entityMetadata) {
-        // displayName is shown when always display name is enabled. Either with or without team.
-        // That's why there are both a displayName and a nametag variable.
-        // Displayname is ignored for players, and is always their username.
+    public void setCustomName(EntityMetadata<Optional<Component>, ?> entityMetadata) {
+        // customName is shown when always custom name is enabled. Either with or without team.
+        // That's why there are both a customName and a nametag variable.
+        // CustomName is ignored for players, and is always their username.
         Optional<Component> name = entityMetadata.getValue();
         if (name.isPresent()) {
-            String displayName = MessageTranslator.convertMessage(name.get(), session.locale());
-            this.displayName = displayName;
-            setNametag(displayName, true);
+            this.customName = MessageTranslator.convertMessage(name.get(), session.locale());
+            setNametag(customName, true);
             return;
         }
-
-        // if no displayName is set, use entity name (ENDER_DRAGON -> Ender Dragon)
-        // maybe we can/should use a translatable here instead?
-        this.displayName = standardDisplayName();
-        setNametag(null, true);
+        this.customName = null;
+        setNametag(getDisplayName(customNameVisible), true);
     }
 
     protected String standardDisplayName() {
         return EntityUtils.translatedEntityName(definition.entityType(), session);
     }
 
-    protected void setNametag(@Nullable String nametag, boolean fromDisplayName) {
+    protected void setNametag(@Nullable String nametag, boolean applyTeamStyling) {
         // ensure that the team format is used when nametag changes
-        if (nametag != null && fromDisplayName) {
+        if (nametag != null && applyTeamStyling) {
             var team = session.getWorldCache().getScoreboard().getTeamFor(teamIdentifier());
             if (team != null) {
                 updateNametag(team);
@@ -531,9 +555,14 @@ public class Entity implements GeyserEntity {
             return;
         }
 
-        dirtyMetadata.put(EntityDataTypes.NAME, nametag);
+        setNameEntityData(nametag);
         // if nametag (player with team) is hidden for player, so should the score (belowname)
         scoreVisibility(!nametag.isEmpty());
+    }
+
+    // See TextDisplayEntity for context
+    protected void setNameEntityData(String nametag) {
+        dirtyMetadata.put(EntityDataTypes.NAME, nametag);
     }
 
     public void updateNametag(@Nullable Team team) {
@@ -542,26 +571,47 @@ public class Entity implements GeyserEntity {
     }
 
     protected void updateNametag(@Nullable Team team, boolean visible) {
-        if (team != null) {
-            String newNametag;
+        if (!visible) {
+            // The name is not visible to the session player; clear name
+            setNametag("", false);
+            return;
+        } else if (team != null) {
             // (team) visibility is LivingEntity+, team displayName is Entity+
-            if (visible) {
-                newNametag = team.displayName(getDisplayName());
-            } else {
-                // The name is not visible to the session player; clear name
-                newNametag = "";
-            }
-            setNametag(newNametag, false);
+            setNametag(team.displayName(getDisplayName(true)), false);
             return;
         }
-        // The name has reset, if it was previously something else
-        setNametag(null, false);
+
+        // The name might need to be reset: no more team!
+        setNametag(getDisplayName(customNameVisible), false);
     }
 
     protected void scoreVisibility(boolean show) {}
 
-    public void setDisplayNameVisible(BooleanEntityMetadata entityMetadata) {
-        dirtyMetadata.put(EntityDataTypes.NAMETAG_ALWAYS_SHOW, (byte) (entityMetadata.getPrimitiveValue() ? 1 : 0));
+    /*
+     * Returns the appropriate name to use for nametags:
+     * Either the custom name, or default type name fallback
+     * Mirrors Mojmap Entity#getName
+     */
+    public @Nullable String getDisplayName(boolean includeStandardName) {
+        if (this.customName != null) {
+            return this.customName;
+        }
+        if (includeStandardName) {
+            return standardDisplayName();
+        }
+        return null;
+    }
+
+    public void setCustomNameVisible(BooleanEntityMetadata entityMetadata) {
+        this.customNameVisible = entityMetadata.getPrimitiveValue();
+        // We must show a nametag (either custom name, or entity type fallback).
+        // But we also have to apply team styling if present.
+        setNametag(getDisplayName(customNameVisible), true);
+        setNametagAlwaysShow(customNameVisible);
+    }
+
+    public void setNametagAlwaysShow(boolean value) {
+        dirtyMetadata.put(EntityDataTypes.NAMETAG_ALWAYS_SHOW, (byte) (value ? 1 : 0));
     }
 
     public final void setSilent(BooleanEntityMetadata entityMetadata) {
@@ -648,8 +698,19 @@ public class Entity implements GeyserEntity {
      *
      * @return the bedrock rotation
      */
-    public Vector3f getBedrockRotation() {
+    public Vector3f bedrockRotation() {
         return Vector3f.from(getPitch(), getYaw(), getHeadYaw());
+    }
+
+    /**
+     * Gets the Bedrock edition position with the offset applied
+     */
+    public Vector3f bedrockPosition() {
+        float offset = getOffset();
+        if (offset == 0f) {
+            return position;
+        }
+        return position.up(offset);
     }
 
     /**
@@ -671,7 +732,7 @@ public class Entity implements GeyserEntity {
      */
     protected void updateMountOffset() {
         if (vehicle != null) {
-            boolean rider = vehicle.getPassengers().get(0) == this;
+            boolean rider = vehicle.getPassengers().getFirst() == this;
             EntityUtils.updateMountOffset(this, vehicle, rider, true, vehicle.getPassengers().indexOf(this), vehicle.getPassengers().size());
             updateBedrockMetadata();
         }
@@ -755,7 +816,7 @@ public class Entity implements GeyserEntity {
         List<Leashable> leashedInRange = session.getEntityCache().getEntities().values().stream()
             .filter(entity -> entity instanceof Leashable leashablex && leashablex.leashHolderBedrockId() == this.geyserId())
             .filter(entity -> {
-                BoundingBox leashedBB = new BoundingBox(entity.position.toDouble(), entity.boundingBoxWidth, entity.boundingBoxHeight, entity.boundingBoxWidth);
+                BoundingBox leashedBB = new BoundingBox(entity.position().toDouble(), entity.boundingBoxWidth, entity.boundingBoxHeight, entity.boundingBoxWidth);
                 return searchBB.checkIntersection(leashedBB);
             }).map(Leashable.class::cast).toList();
 
@@ -804,10 +865,9 @@ public class Entity implements GeyserEntity {
             @Override
             public <T> void update(@NonNull GeyserEntityProperty<T> property, @Nullable T value) {
                 Objects.requireNonNull(property, "property must not be null!");
-                if (!(property instanceof PropertyType)) {
+                if (!(property instanceof PropertyType<T, ?> propertyType)) {
                     throw new IllegalArgumentException("Invalid property implementation! Got: " + property.getClass().getSimpleName());
                 }
-                PropertyType<T, ? extends EntityProperty> propertyType = (PropertyType<T, ?>) property;
                 int index = propertyDefinitions.getPropertyIndex(property.identifier().toString());
                 if (index < 0) {
                     throw new IllegalArgumentException("No property with the name " + property.identifier() + " has been registered.");
