@@ -342,7 +342,7 @@ public class AbstractHorseEntity extends AnimalEntity implements ClientVehicle {
     }
 
     @Override
-    public boolean isClientControlled() {
-        return getFlag(EntityFlag.SADDLED) && !passengers.isEmpty() && passengers.get(0) == session.getPlayerEntity() && !session.isInClientPredictedVehicle();
+    public boolean shouldSimulateMovement() {
+        return getFlag(EntityFlag.SADDLED) && !passengers.isEmpty() && passengers.getFirst() == session.getPlayerEntity() && !session.isInClientPredictedVehicle();
     }
 }
